# easy_crypt

./: .gitignore  README.md  generate.bat  pubspec.yaml
android/app/: build.gradle
assets/fonts/: .gitignore
assets/i18n/: strings.i18n.json  strings_zh-CN.i18n.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/account/: account_screen.dart
lib/app/: observer.dart  run_desktop_app.dart
lib/bridge/: bridge_generated.dart
lib/common/: clipboard_utils.dart  dev_utils.dart  local_storage.dart  logger.dart  replace_name.dart  url_schemas.dart
lib/customize_flow/: extension.dart  flow_screen.dart
lib/datasource/: datasource_screen.dart
lib/file_system/: enum.dart  fs_preview.dart  local.dart  (+1 more)
linux/: CMakeLists.txt  my_application.cc
native/: .gitignore  Cargo.toml  build.rs
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  lib.rs
native/src/constants/: mod.rs
native/src/emit/: decrypt_message.rs  emitter.rs  encrypt_message.rs  file_transfer_message.rs  mod.rs  random_key_message.rs  zip_file_message.rs
native/src/process/: chain.rs  encrypt.rs  mod.rs  transfer.rs
native/src/process/operator/: not_operator.rs  xor_operator.rs
native/src/tests/: mod.rs
native/src/utils/: check.rs
rust/: Cargo.toml  format.bat
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: crypt.rs  datasource.rs  mod.rs  s3.rs  simple.rs
rust/src/constants/: mod.rs
rust/src/emit/: decrypt_message.rs  emitter.rs  encrypt_message.rs  mod.rs  random_key_message.rs  two_datasource_transfer_message.rs
rust/src/process/: chain.rs  datasource.rs  decrypt.rs  encrypt.rs  mod.rs  transfer.rs
rust/src/process/datasource/: base_trait.rs  cached.rs  local.rs  mod.rs  s3.rs
rust/src/process/operator/: aes_operator.rs  mod.rs
rust/src/tests/: mod.rs
rust/src/utils/: check.rs
test/: menu_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt  rust.cmake
(+101 files in other folders)
