[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aes-gcm-siv = "0.11.1"
flutter_rust_bridge = "= 1.82.6"

[build-dependencies]
flutter_rust_bridge_codegen = "= 1.82.6"