[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
aes-gcm-siv = "0.11.1"
anyhow = "1"
flutter_rust_bridge = "= 1.82.6"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.108"
walkdir = "2.4.0"
zip = "0.6.6"

[build-dependencies]
flutter_rust_bridge_codegen = "= 1.82.6"