[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
aes-gcm-siv = "0.11.1"
anyhow = "1"
async-trait = "0.1.77"
flutter_rust_bridge = "=2.0.0-dev.21"
hex = "0.4.0"
md5 = "0.7"
once_cell = "1.19.0"
opendal = { version = "0.44.1", features = ["services-oss","services-s3","services-webdav"]} 
rand = "0.8.5"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
walkdir = "2.4.0"
zip = "0.6.6"